feat: bean post processor and its test